[tool.poetry]
name = "keyboard"
version = "0.1.0"
description = ""
authors = ["Brandon Freeman"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
zero-hid = "^0.1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
